// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should edit members 1`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit.Foo"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit.Foo"
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;

exports[`should edit members 2`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit.Foo"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit.Foo"
  >
    <BulletListIcon />
  </ButtonIcon>
  <EditMembersModal
    group={
      {
        "managed": false,
        "membersCount": 5,
        "name": "Foo",
      }
    }
    onClose={[Function]}
  />
</Fragment>
`;

exports[`should edit members 3`] = `
<Fragment>
  <ButtonIcon
    aria-label="groups.users.edit.Foo"
    className="button-small"
    onClick={[Function]}
    title="groups.users.edit.Foo"
  >
    <BulletListIcon />
  </ButtonIcon>
</Fragment>
`;
